istio-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollouts-demo-vsvc
spec:
  gateways:
  - rollouts-demo-gateway
  hosts:
  - '*'
  http:
  - name: primary # Should match spec.strategy.canary.trafficRouting.istio.virtualService.routes
    route:
    - destination:
        host: rollouts-demo-stable # Should match spec.strategy.canary.stableService
      weight: 100
    - destination:
        host: rollouts-demo-canary # Should match spec.strategy.canary.canaryService
      weight: 0
